--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "git+ssh://git@github.com:scotttesler/logurt.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "version": "1.1.0"
 }
