Pretty format output
- Format onto multiple lines with 2 space.
- Display with sorted keys.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "json-stable-stringify": "^1.0.1",
     "log-symbols": "^2.2.0"
   },
   "description": "Prettier logging",
